# team-mock-waste-sorter

./: README.md  dev_environment_setup.md  requirements.txt
Vision & AI/: README.md  check_labels.py  remap_labels.py
Vision & AI/docs/: dataset_survey.md  ml_environment_setup.md  model_selection.md  vision_node_spec.md
Vision & AI/src/: decision_node.py
Vision & AI/src/vision_node/: CMakeLists.txt  package.xml
Vision & AI/src/vision_node/launch/: vision_node.launch
Vision & AI/src/vision_node/msg/: DetectionResult.msg
Vision & AI/src/vision_node/scripts/: test_vision_node.py  vision_node.py
arm_control/: dofbot_controller.py  keyboard_teleop.py  pose_loader.py  poses.yaml  target_tracker.py
